
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sysinfo {int freeram; } ;


 char* malloc (int ) ;
 int memset (char*,int,int ) ;
 int perror (char*) ;
 int sysinfo (struct sysinfo*) ;

int consume_memory()
{
 struct sysinfo info;
 char *vmem;

 sysinfo(&info);
 vmem = malloc(info.freeram);
 if (vmem == ((void*)0))
 {
  perror("malloc");
  return -1;
 }
 memset(vmem, 0x90, info.freeram);

}
