; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_778.c_consume_memory.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_778.c_consume_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysinfo = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"malloc\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @consume_memory() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.sysinfo, align 4
  %3 = alloca i8*, align 8
  %4 = call i32 @sysinfo(%struct.sysinfo* %2)
  %5 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i8* @malloc(i32 %6)
  store i8* %7, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %17

12:                                               ; preds = %0
  %13 = load i8*, i8** %3, align 8
  %14 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @memset(i8* %13, i32 144, i32 %15)
  br label %17

17:                                               ; preds = %12, %10
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i32 @sysinfo(%struct.sysinfo*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
